# asf-tools

./: .editorconfig  .gitignore  .prettierrc  .pylintrc  22NWWGLT3_samplesheet.csv  22NWWGLT3_samplesheet_8_8.csv  Dockerfile  README.md  bcl_config_22NWWGLT3.json  bcl_samplesheet_22NWWMLT3.csv  bcl_samplesheet_22NWYFLT3.csv  json_22NWWGLT3.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_info.csv  test_info_22NWWMLT3.csv  test_info_22NWWMLT3_1.csv  test_info_22NWYFLT3.csv  test_info_22NWYFLT3_1.csv  tox.ini  update_version.py
.github/: copilot-instructions.md  push_dockerhub_release.yml
.github/workflows/: ci.yml  push_containers.yml  push_dockerhub_release.yml
asf_tools/: __init__.py  __main__.py
asf_tools/api/clarity/: clarity_helper_lims.py  clarity_lims.py  helper_lims.py  models.py
asf_tools/config/: toml_loader.py
asf_tools/database/: base_model.py  crud.py  db.py
asf_tools/functions/: ont_gen_demux_run.py
asf_tools/illumina/: illumina_data_wrangling.py  illumina_utils.py
asf_tools/io/: data_management.py  log_subprocess.py  storage_interface.py  utils.py
asf_tools/nextflow/: gen_demux_run.py  utils.py
asf_tools/ont/: data_cli.py  data_transfer.py  ont_gen_demux_run.py
asf_tools/slack/: webhook_logger.py
asf_tools/slurm/: utils.py
asf_tools/ssh/: file_object.py  nemo.py
docs/: demux_refractoring_notes.md  illumina_old_demux_design.md  illumina_samplesheet_nextflow_old_demux.md  illumina_samplesheet_old_demuxnotes.md  key_functionalities_overview.md  ppms_notes.md  requirements.md
docs/illumina/: cellranger_legacy.md  illumina_legacy_demux_design.md  illumina_samplesheet_nextflow_legacy_demux.md  illumina_samplesheet_overview.md  illumina_samplesheet_perl.md
tests/: test_api.py  test_clarity_helper_lims.py  test_clarity_lims.py  test_cli.py  test_config_toml_loader.py  test_data_management.py  test_data_transfer.py  test_database_db.py  test_gen_demux_run.py  test_helper_api.py  test_illumina.py  test_illumina_data_wrangling.py  test_io.py  test_io_data_management.py  test_io_storage_interface.py  test_io_utils.py  test_nextflow.py  test_nextflow_gen_demux_run.py  test_nextflow_util.py  test_ont.py  test_slack_webhook_logger.py  test_slurm.py  test_slurm_utils.py  test_ssh_file_object.py  test_ssh_nemo_connection.py  utils.py
tests/api/clarity/: clarity_lims_tests.py
tests/data/api/clarity/: test_credentials.toml
tests/data/illumina/: RunInfo.xml  dlp_barcode_extended_info.csv  dlp_barcode_extended_info_testdataset.csv  dlp_sample_info.csv  fake_RunInfo.xml
tests/data/illumina/22G57KLT4/: RunInfo.xml
tests/data/illumina/22NWWGLT3/: RunInfo.xml
tests/data/illumina/22NWWMLT3/: RunInfo.xml
tests/data/illumina/22NWYFLT3/: RunInfo.xml
tests/io/: data_management.py  utils.py
tests/mocks/: clarity_helper_lims_mock.py  clarity_lims_mock.py  mock_clarity_lims.py
tests/nextflow/: gen_demux_run.py  util.py
tests/ont/: ont_gen_demux_run.py
tests/slurm/: utils.py
(+36 files in other folders)
